adding tech stack and some design changes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				</div>
 				<div class="animation-for-button">
 					<div class="button-view-my-work section2">
-						<p>View my work <span id="littleArrow" class="fas fa-arrow-right"></span></p>
+						<p>About me &nbsp;<span id="littleArrow" class="fas fa-arrow-right"></span></p>
 					</div>
 				</div>
 				<p class="special-text"><i>The power of one, if fearless and focused, is formidable,<br/> but the power of many working together is better.</i><br/>-Gloria Macapagal Arroyo</p>
@@ -141,7 +141,7 @@
 									<img src="images/Foto.JPG"/>
 								</div>
 								<div class="content-Section">
-									<a href="#portfolio" class="btn btn-outline-info section3">FIND OUT MORE</a>
+									<a href="#portfolio" class="btn btn-outline-info section3">VIEW MY WORK</a>
 								</div>
 								<div class="content-Section">
 									<div class="header-content">
@@ -165,23 +165,43 @@
 										<p>JQuery <span class="fas fa-code-branch"></span></p>
 										<div class="container"><div class="skills jquery">Advanced</div></div>
 										<p>React <span class="fab fa-react"></span></p>
-										<div class="container"><div class="skills react">Basic</div></div>
+										<div class="container"><div class="skills jquery">Advanced</div></div>
 										<p>Bootsrap <span class="fab fa-blogger"></span></p>
 										<div class="container"><div class="skills bootstrap">Basic</div></div>
-										<p>JSON &amp; AJAX <span class="fas fa-barcode"></span></p>
-										<div class="container"><div class="skills json">Basic</div></div>
 										<p>Regular Expression <span class="fas fa-search-plus"></span></p>
 										<div class="container"><div class="skills regex">Basic</div></div>
 										<p>PHP <span class="fab fa-php"></span></p>
 										<div class="container"><div class="skills php">Advanced</div></div>
 										<p>SQL <span class="fas fa-database"></span></p>
 										<div class="container"><div class="skills sql">Basic</div></div>
-										<p>Java / JavaFX <span class="fab fa-java"></span></p>
+										<p>Java <span class="fab fa-java"></span></p>
 										<div class="container"><div class="skills java">Advanced</div></div>
 										<p>Docker <span class="fab fa-docker"></span></p>
 										<div class="container"><div class="skills docker">Basic</div></div>
 										<p>Git <span class="fab fa-git-square"></span></p>
 										<div class="container"><div class="skills git">Basic</div></div>
+										<p>&nbsp;</p>
+								</div>
+						</div>
+						<div class="content-Section">
+								<div class="wrapper-container">
+										<div class="header container"><h1 class="skills-Header">Tech Stack</h1></div>
+										<p>Spring - Maven <span class="fas fa-leaf"></span></p>
+										<div class="container"><div class="skills react">Advanced</div></div>
+										<p>NodeJS <span class="fab fa-node"></span></p>
+										<div class="container"><div class="skills react">Advanced</div></div>
+										<p>ReactJS <span class="fab fa-react"></span></p>
+										<div class="container"><div class="skills react">Advanced</div></div>
+										<p>Jenkins <span class="fab fa-jenkins"></span></p>
+										<div class="container"><div class="skills react">Advanced</div></div>
+										<p>JavaFX <span class="fab fa-java"></span></p>
+										<div class="container"><div class="skills react">Advanced</div></div>
+										<p>Selenium <span class="fas fa-check-circle"></span></p>
+										<div class="container"><div class="skills react">Advanced</div></div>
+										<p>JSON & AJAX <span class="fas fa-network-wired"></span></p>
+										<div class="container"><div class="skills regex">Basic</div></div>
+										<p>GWT <span class="fab fa-google-drive"></span></p>
+										<div class="container"><div class="skills php">Advanced</div></div>
 										<p>&nbsp;</p>
 								</div>
 						</div>
