--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.toast.min.js"></script>
 	<script src="assets/js/custom.js"></script>
+	<link rel="icon" href="images/crisscrosscrassIcon.png" type="image/png" />
 </head>
 <body>
 	<div class="overflow-wrap">
