adding another project

--- a/index.html
+++ b/index.html
@@ -221,6 +221,11 @@
 					<div class="content-Split">
 							<div class="content-Section">
 								<div class="wrapper-left-container">
+									<h2>QMTOOLBAR</h2>
+								</div>
+							</div>
+							<div class="content-Section">
+								<div class="wrapper-left-container">
 									<h2>THE "MODERN FETCHING IMAGES"</h2>
 								</div>
 							</div>
@@ -236,6 +241,19 @@
 							</div>
 					</div>
 					<div class="content-Split">
+								<div class="content-Section">
+								<div class="wrapper-left-container">
+									<img src="images/qmtoolbar.png" alt="" class="responsive"/>
+									<div class="content-Section">
+										<a href="https://crisscrosscrass.github.io/assets/QM/qmtoolbar.htm" class="btn btn-outline-primary" target="_blank">DEMO</a>
+										<i>Project built with:<br> Vanila Javascript, CSS, Chrome Extensions</i><br>
+									</div>
+								</div>
+								<p>This is just a small project, but only came to mind because of too much work :D In our department i was responsible for many countries at the same time. Due to the fact it doesn't make me happy to type too much stuff whenever i need to go to one of our internal tools and also to keep an eye of each specfic country code and sometimes i even don't remeber which URL was use for which tool. I decided to review all my bookmarks and build an easy to switch toolbar. My Main goal was basically one source, where i can switch to any tool in just 2 clicks and it worked out very well. First click on my personal Bookmarklet Script and the second click on the Tool, its sooo much easier now to maintain all of my daily work. With Chrome Extension i could also excel my goal, now i can switch to any tool in just 1 click :D</p>
+								<div class="content-Section">
+									<a href="https://crisscrosscrass.github.io/assets/QM/qmtoolbar.js" class="btn btn-outline-info" target="_blank">SOURCE</a>
+								</div>
+							</div>
 							<div class="content-Section">
 								<div class="wrapper-left-container">
 									<img src="images/modernfetchingImages.png" alt="" class="responsive"/>
@@ -246,7 +264,7 @@
 								</div>
 								<p>Whenever i start to work with a new Framework, i tend to build a Project where i personally also interessted in. Doesn't matter how challenging this could be, as long i can see the Final Results. For this Framework i didn't want to build a another ToDo List App, i liked the Idea of a Portfolio for a Photograph, where he/she can upload all his Files into a external File(something like a Spreadsheet) and with this Webapp create an nice Image Gallery.Easy to Maintain and to extend. I put 2 Image  Examples Gallery where the Data are fetched, one external JSON File and one external Sheet File into the Demo.</p>
 								<div class="content-Section">
-									<a href="https://github.com/crisscrosscrass/modernfetchingimages" class="btn btn-outline-info" target="_blank">FULL STORY</a>
+									<a href="https://github.com/crisscrosscrass/modernfetchingimages" class="btn btn-outline-info" target="_blank">GITHUB</a>
 								</div>
 							</div>
 							<div class="content-Section">
@@ -258,7 +276,7 @@
 								</div>
 								<p>At Visual Meta we have to sanity check thousand of webpages on a daily basis in order to provide users with the best recent and newest product information on our landing pages. To ease the burden of this huge effort, we planned, developed and released the “QM Frontend Checker tool”, a JavaFX and Selenium based solution to automate & simplify this process.</p>
 								<div class="content-Section">
-									<a href="https://github.com/crisscrosscrass/frontendcheckerqm" class="btn btn-outline-info" target="_blank">FULL STORY</a>
+									<a href="https://github.com/crisscrosscrass/frontendcheckerqm" class="btn btn-outline-info" target="_blank">GITHUB</a>
 								</div>
 							</div>
 							<div class="content-Section">
@@ -266,12 +284,13 @@
 									<img src="images/Project1.jpg" alt="" class="responsive"/>
 									<div class="content-Section">
 										<a href="http://crisscrosscrass.epizy.com" class="btn btn-outline-primary" target="_blank">DEMO</a>(filzesize max. 2mb)
-										<i>Project built with:<br> HTML, CSS, Java-Script, PHP, Ajax</i><br>
+										<i>Project built with:<br> HTML, CSS, Java-Script, JQuery, PHP, Ajax</i><br>
 									</div>
 								</div>
 								<p>At Visual Meta we have to synchronize millions of products from our partner-shops on a daily basis in order to provide users with the most recent product information (price changes, availability or even new products). Prior to allowing new product feeds to join the synchronization schedule, they have to undergo a detailed quality check. A manual validation of CSV & XML files with hundreds of thousands of lines is very time consuming and vague. To ease the burden of this huge effort, we planned, developed and released the “Feed Detective”, a web-based solution to automate & simplify this process.</p>
 								<div class="content-Section">
 									<a href="https://drive.google.com/open?id=1YRRUeMdbdxoKssb8YePv45Yu9bJbfvg_" class="btn btn-outline-info" target="_blank">FULL STORY</a>
+									<a href="https://github.com/crisscrosscrass/feeddetective" class="btn btn-outline-info" target="_blank">GITHUB</a>
 								</div>
 							</div>
 					</div>
