--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 								</div>
 						</div>
 						<div class="content-Section">
-								<div class="wrapper-container">
+								<div class="wrapper-container middle">
 										<div class="header container"><h1 class="skills-Header">Skills</h1></div>
 										<p>HTML / HTML5 <span class="fab fa-html5"></span></p>
 										<div class="container"><div class="skills html">Expert</div></div>
@@ -225,12 +225,12 @@
 								</div>
 							</div>
 							<div class="content-Section">
-								<div class="wrapper-left-container">
+								<div class="wrapper-middle-container">
 									<h2>THE "MODERN FETCHING IMAGES"</h2>
 								</div>
 							</div>
 							<div class="content-Section">
-								<div class="wrapper-right-container">
+								<div class="wrapper-middle-container">
 									<h2>FRONTEND AUTOMATION</h2>
 								</div>
 							</div>
@@ -249,13 +249,13 @@
 										<i>Project built with:<br> Vanila Javascript, CSS, Chrome Extensions</i><br>
 									</div>
 								</div>
-								<p>This is just a small project, but only came to mind because of too much work :D In our department i was responsible for many countries at the same time. Due to the fact it doesn't make me happy to type too much stuff whenever i need to go to one of our internal tools and also to keep an eye of each specfic country code and sometimes i even don't remeber which URL was use for which tool. I decided to review all my bookmarks and build an easy to switch toolbar. My Main goal was basically one source, where i can switch to any tool in just 2 clicks and it worked out very well. First click on my personal Bookmarklet Script and the second click on the Tool, its sooo much easier now to maintain all of my daily work. With Chrome Extension i could also excel my goal, now i can switch to any tool in just 1 click :D</p>
+								<p>This is just a small project, but only came to mind because of too much work. In our department i was responsible for many countries at the same time. Due to the fact it doesn't make me happy to type too much stuff whenever i need to go to one of our internal tools and also to keep an eye of each specfic country code and sometimes i even don't remeber which URL was used for which tool. I decided to review all my bookmarks and build an easy to switch toolbar. My Main goal i can switch to any tool in just 2 clicks and it worked out very well. So my current workflow, first click on my personal Bookmarklet Script and the second click on the Tool, its sooo much easier now to maintain all of my daily task in a huge veriaty of tools. With Chrome Extension i could also excel my goal, now i can switch to any tool in just 1 click, it feels very smooth.</p>
 								<div class="content-Section">
 									<a href="https://crisscrosscrass.github.io/assets/QM/qmtoolbar.js" class="btn btn-outline-info" target="_blank">SOURCE</a>
 								</div>
 							</div>
 							<div class="content-Section">
-								<div class="wrapper-left-container">
+								<div class="wrapper-middle-container">
 									<img src="images/modernfetchingImages.png" alt="" class="responsive"/>
 									<div class="content-Section">
 										<a href="https://crisscrosscrass.github.io/modernfetchingimages/" class="btn btn-outline-primary" target="_blank">DEMO</a>
@@ -268,7 +268,7 @@
 								</div>
 							</div>
 							<div class="content-Section">
-								<div class="wrapper-right-container">
+								<div class="wrapper-middle-container">
 									<img src="images/tool.jpg" alt="" class="responsive"/>
 									<div class="content-Section">
 										<i>Project built with:<br> Java, JavaFX, CSS, Selenium</i><br>
@@ -280,7 +280,7 @@
 								</div>
 							</div>
 							<div class="content-Section">
-								<div class="wrapper-left-container">
+								<div class="wrapper-right-container">
 									<img src="images/Project1.jpg" alt="" class="responsive"/>
 									<div class="content-Section">
 										<a href="http://crisscrosscrass.epizy.com" class="btn btn-outline-primary" target="_blank">DEMO</a>(filzesize max. 2mb)
