uploaded new pdf

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 							</div>
 							<div class="content-Section">
 								<div class="wrapper-middle-container">
-									<h2>FRONTEND AUTOMATION</h2>
+									<h2>QM AUTOMATION</h2>
 								</div>
 							</div>
 							<div class="content-Section">
@@ -274,8 +274,9 @@
 										<i>Project built with:<br> Java, JavaFX, CSS, Selenium</i><br>
 									</div>
 								</div>
-								<p>At Visual Meta we have to sanity check thousand of webpages on a daily basis in order to provide users with the best recent and newest product information on our landing pages. To ease the burden of this huge effort, we planned, developed and released the “QM Frontend Checker tool”, a JavaFX and Selenium based solution to automate & simplify this process.</p>
+								<p>At Visual Meta we have to sanity check thousand of webpages on a daily basis in order to provide users with the best recent and newest product information on our landing pages. To ease the burden of this huge effort, we planned, developed and released the “QM Automation tool”, a JavaFX and Selenium based solution to automate & simplify this process.</p>
 								<div class="content-Section">
+									<a href="https://crisscrosscrass.github.io/images/QMAutomation.pdf" class="btn btn-outline-info" target="_blank">FULL STORY</a>
 									<a href="https://github.com/crisscrosscrass/frontendcheckerqm" class="btn btn-outline-info" target="_blank">GITHUB</a>
 								</div>
 							</div>
