added new project

--- a/index.html
+++ b/index.html
@@ -219,6 +219,11 @@
 					<div class="content-Split">
 							<div class="content-Section">
 								<div class="wrapper-left-container">
+									<h2>BEERLIST WEBAPP</h2>
+								</div>
+							</div>
+							<div class="content-Section">
+								<div class="wrapper-middle-container">
 									<h2>QM TOOLBAR</h2>
 								</div>
 							</div>
@@ -239,8 +244,21 @@
 							</div>
 					</div>
 					<div class="content-Split">
-								<div class="content-Section">
+							<div class="content-Section">
 								<div class="wrapper-left-container">
+									<img src="images/exampleBeerApp.png" alt="" class="responsive"/>
+									<div class="content-Section">
+										<a href="https://blooming-sierra-74939.herokuapp.com/" class="btn btn-outline-primary" target="_blank">DEMO</a>
+										<i>Project built with:<br> NodeJS, React, Heroku</i><br>
+									</div>
+								</div>
+								<p>This was a small Task for a Company to prove that i can work with APIs, so why not choose an very fomouse API for Beers? This is just a small App, to display a list of Beers and getting some Detail information about the selected Item. The Interessting part was basically you need to set up a Backend API (used Nodejs here) to fetch the Data from there Backend and then display the Data to the Frontend (used React here). </p>
+								<div class="content-Section">
+									<a href="https://crisscrosscrass.github.io/assets/QM/qmtoolbar.js" class="btn btn-outline-info" target="_blank">SOURCE</a>
+								</div>
+							</div>
+							<div class="content-Section">
+								<div class="wrapper-middle-container">
 									<img src="images/qmtoolbar.png" alt="" class="responsive"/>
 									<div class="content-Section">
 										<a href="https://crisscrosscrass.github.io/assets/QM/qmtoolbar.htm" class="btn btn-outline-primary" target="_blank">DEMO</a>
