adding auto appending

--- a/assets/QM/qmtoolbar.htm
+++ b/assets/QM/qmtoolbar.htm
@@ -33,7 +33,9 @@
     </div>
     <script>
        function openToolbar(){
-        javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://crisscrosscrass.github.io/assets/QM/qmtoolbar.js?'+Math.random();})();
+        javascript:(function(){
+            document.body.appendChild(document.createElement('script')).src='https://crisscrosscrass.github.io/assets/QM/qmtoolbar.js?'+Math.random();})();
+            //document.body.appendChild(document.createElement('script')).src='qmtoolbar.js?'+Math.random();})();
        }
     </script>
 </body>
