--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
 										<div class="container"><div class="skills sql">Basic</div></div>
 										<p>Java <span class="fab fa-java"></span></p>
 										<div class="container"><div class="skills java">Advanced</div></div>
+										<p>Python <span class="fab fa-python"></span></p>
+										<div class="container"><div class="skills java">Advanced</div></div>
+										<p>C++ <span class="fab fa-cuttkefish"></span></p>
+										<div class="container"><div class="skills java">Advanced</div></div>
 										<p>&nbsp;</p>
 								</div>
 						</div>
@@ -187,6 +191,8 @@
 										<div class="container"><div class="skills react">Advanced</div></div>
 										<p>ReactJS <span class="fab fa-react"></span></p>
 										<div class="container"><div class="skills react">Advanced</div></div>
+										<p>Angular <span class="fab fa-angullar"></span></p>
+										<div class="container"><div class="skills angullar">Advanced</div></div>
 										<p>Jenkins <span class="fab fa-jenkins"></span></p>
 										<div class="container"><div class="skills react">Advanced</div></div>
 										<p>JavaFX <span class="fab fa-java"></span></p>
@@ -201,6 +207,8 @@
 										<div class="container"><div class="skills docker">Basic</div></div>
 										<p>Git <span class="fab fa-git-square"></span></p>
 										<div class="container"><div class="skills git">Basic</div></div>
+										<p>Flask <span class="fas fa-flask"></span></p>
+										<div class="container"><div class="skills flask">Basic</div></div>
 										<p>&nbsp;</p>
 								</div>
 						</div>
