--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 										<div class="container"><div class="skills java">Advanced</div></div>
 										<p>Python <span class="fab fa-python"></span></p>
 										<div class="container"><div class="skills java">Advanced</div></div>
-										<p>C++ <span class="fab fa-cuttkefish"></span></p>
+										<p>C++ <span class="fab fa-cuttlefish"></span></p>
 										<div class="container"><div class="skills java">Advanced</div></div>
 										<p>&nbsp;</p>
 								</div>
@@ -191,7 +191,7 @@
 										<div class="container"><div class="skills react">Advanced</div></div>
 										<p>ReactJS <span class="fab fa-react"></span></p>
 										<div class="container"><div class="skills react">Advanced</div></div>
-										<p>Angular <span class="fab fa-angullar"></span></p>
+										<p>Angular <span class="fab fa-angular"></span></p>
 										<div class="container"><div class="skills angullar">Advanced</div></div>
 										<p>Jenkins <span class="fab fa-jenkins"></span></p>
 										<div class="container"><div class="skills react">Advanced</div></div>
@@ -209,7 +209,6 @@
 										<div class="container"><div class="skills git">Basic</div></div>
 										<p>Flask <span class="fas fa-flask"></span></p>
 										<div class="container"><div class="skills flask">Basic</div></div>
-										<p>&nbsp;</p>
 								</div>
 						</div>
 				</div>
