--- a/NewDesign/HexagonGridElement.html
+++ b/NewDesign/HexagonGridElement.html
@@ -47,6 +47,7 @@
     </script>
     <script src="hexagon.js"></script>
     <script src="circle.js"></script>
+    <script src="grid.js"></script>
     <script src="main.js"></script>
     <script>
     </script>
