--- a/NewDesign/HexagonGridElement.html
+++ b/NewDesign/HexagonGridElement.html
@@ -4,11 +4,6 @@
 <head>
     <meta charset="utf-8" />
     <title>ParticlesTest</title>
-    <section id="home">
-        <div id="particles"></div>
-    </section>
-
-
     <style>
         body,
         html {
@@ -17,12 +12,12 @@
             color: rgba(115, 246, 255, 0.904);
             background-color: rgb(255, 255, 255);
         }
-
+        
         #home {
             width: 100%;
             height: 100%;
         }
-
+        
         #particles {
             position: absolute;
             top: 0;
@@ -37,17 +32,20 @@
 </head>
 
 <body>
+    <section id="home">
+        <div id="particles"></div>
+    </section>
     <script>
         function randomInRange(min, max) {
             var n = Math.random() * (max - min + 0.1) + min;
             return n > max ? randomInRange(min, max) : n;
         }
         var colorArray = ['#A239CA', 'white', '#4717F6'];
-
     </script>
     <script src="hexagon.js"></script>
     <script src="circle.js"></script>
     <script src="grid.js"></script>
+    <script src="lineMover.js"></script>
     <script src="main.js"></script>
     <script>
     </script>
