adding more projects

--- a/index.html
+++ b/index.html
@@ -392,6 +392,101 @@
                         <div class="our-project">
                             <div class="img">
                                 <div class="projectContainer">
+                                    <img src="images/feedcomissioner.jpg" alt="Avatar" class="projectImage">
+                                    <div class="projectOverlay">
+                                        <div class="projectText">
+                                            <h4 class="text-uppercase">Feed Comissioner</h4>
+                                            <h4 class="text-uppercase"><button class="btn btn-outline-primary customButtonBorder" onclick="new ModalWindow('synctemplate')">Readmore</button></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Feed Comissioner</h4>
+                                <span class="text-secondary"><i>Project built with:<br> NodeJS, Materialize</i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item" data-filter="latest">
+                        <div class="our-project">
+                            <div class="img">
+                                <div class="projectContainer">
+                                    <img src="images/synctemplate.jpg" alt="Avatar" class="projectImage">
+                                    <div class="projectOverlay">
+                                        <div class="projectText">
+                                            <h4 class="text-uppercase">Sync Template</h4>
+                                            <h4 class="text-uppercase"><button class="btn btn-outline-primary customButtonBorder" onclick="new ModalWindow('synctemplate')">Readmore</button></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Sync Template</h4>
+                                <span class="text-secondary"><i>Project built with:<br> Python, Materialize, Flask, MongoDB</i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item" data-filter="upcoming">
+                        <div class="our-project">
+                            <div class="img">
+                                <div class="projectContainer">
+                                    <img src="images/aggregator.jpg" alt="Avatar" class="projectImage">
+                                    <div class="projectOverlay">
+                                        <div class="projectText">
+                                            <h4 class="text-uppercase">Aggregator Monitor</h4>
+                                            <h4 class="text-uppercase"><button class="btn btn-outline-primary customButtonBorder" onclick="new ModalWindow('aggregator')">Readmore</button></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Aggregator Monitor</h4>
+                                <span class="text-secondary"><i>Project built with:<br> Java, React, Spring, MySQL</i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item" data-filter="latest">
+                        <div class="our-project">
+                            <div class="img">
+                                <div class="projectContainer">
+                                    <img src="images/gChatBot.jpg" alt="Avatar" class="projectImage">
+                                    <div class="projectOverlay">
+                                        <div class="projectText">
+                                            <h4 class="text-uppercase">Incident Notifications</h4>
+                                            <h4 class="text-uppercase"><button class="btn btn-outline-primary customButtonBorder" onclick="new ModalWindow('notifications')">Readmore</button></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Incident Notifications</h4>
+                                <span class="text-secondary"><i>Project built with:<br> Python, Jira, Webhooks</i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item" data-filter="developing">
+                        <div class="our-project">
+                            <div class="img">
+                                <div class="projectContainer">
+                                    <img src="images/salestracking.jpg" alt="Avatar" class="projectImage">
+                                    <div class="projectOverlay">
+                                        <div class="projectText">
+                                            <h4 class="text-uppercase">Salestracking</h4>
+                                            <h4 class="text-uppercase"><button class="btn btn-outline-primary customButtonBorder" onclick="new ModalWindow('salestracking')">Readmore</button></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Salestracking</h4>
+                                <span class="text-secondary"><i>Project built with:<br> Python, Flask, MySQL, uWSGI</i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item" data-filter="developing">
+                        <div class="our-project">
+                            <div class="img">
+                                <div class="projectContainer">
                                     <img src="images/failwatch.jpg" alt="Avatar" class="projectImage">
                                     <div class="projectOverlay">
                                         <div class="projectText">
@@ -403,7 +498,7 @@
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Failwatch</h4>
-                                <span class="text-secondary"><i>Project built with:<br> Python, Flask, MongoDB</i></span>
+                                <span class="text-secondary"><i>Project built with:<br> Python, Flask, MongoDB, uWSGI</i></span>
                             </div>
                         </div>
                     </div>
