--- a/index.html
+++ b/index.html
@@ -396,14 +396,14 @@
                                     <div class="projectOverlay">
                                         <div class="projectText">
                                             <h4 class="text-uppercase">Feed Comissioner</h4>
-                                            <h4 class="text-uppercase"><button class="btn btn-outline-primary customButtonBorder" onclick="new ModalWindow('synctemplate')">Readmore</button></h4>
+                                            <h4 class="text-uppercase"><button class="btn btn-outline-primary customButtonBorder" onclick="new ModalWindow('comissioner')">Readmore</button></h4>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Feed Comissioner</h4>
-                                <span class="text-secondary"><i>Project built with:<br> NodeJS, Materialize</i></span>
+                                <span class="text-secondary"><i>Project built with:<br> NodeJS, Express, Socket.io, EJS</i></span>
                             </div>
                         </div>
                     </div>
