--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 <div id="projectAttachedLinks">
                 </div>
                 <p id="projectText"></p>
+                <div id="projectFeatures"></div>
             </div>
             <div id="modalFullScreenClose"></div>
         </div>
